tests/snapshots/config__task_require_unknown_project.stderr.snap
---
source: tests/config.rs
expression: stderr.as_ref()
---
Error: 
  × Errors occurred when validating your configuration

Error: 
  × Couldn't find a project named a-missing-project
   ╭─[project.kdl:4:1]
 4 │     task "build" {
 5 │         requires "build" in="a-missing-project"
   ·                              ────────┬────────
   ·                                      ╰── Couldn't find this project
 6 │     }
   ╰────


